force-app/main/default/objects/Query_Builder_Detail__c/Query_Builder_Detail__c.object-meta.xml
<CustomObject>
    <label>Query Builder Detail</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>Query Builder Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Builder Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>