force-app/main/default/objects/Query_Builder_Detail__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>!=</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Less Than Or Equals</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Greater Than Or Equals</label>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>NOT LIKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>