force-app/main/default/objects/Query_Builder_Detail__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>