force-app/main/default/objects/Query_Builder_Detail__c/fields/Value_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Value_Criteria__c</fullName>
    <label>Value Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fetch User City</fullName>
            </value>
            <value>
                <fullName>Fetch User Country</fullName>
            </value>
            <value>
                <fullName>Fetch User Manager</fullName>
            </value>
            <value>
                <fullName>Fetch User State</fullName>
            </value>
            <value>
                <fullName>Fetch User Postal Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>