force-app/main/default/objects/Query_Builder_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Filter_Value__c</columns>
    <columns>Value_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>